--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -89,7 +89,10 @@ a:hover { border-bottom: 1px solid #666; }
 #num-online:hover { color: #fff; }
 #online-users { padding: 10px 0 10px 20px; background: #000; display: none; z-index: 200; position: relative; }
 
-#drawing {  background: #fff; }
+#draw-wrapper { position: absolute; background: #000; padding: 10px 10px 0 10px; display: none; z-index: 101; border-top-left-radius: 5px; border-top-right-radius: 5px; }
+#draw {  background: #333; width: 300px; height: 300px; }
+#draw:before { content: "Draw here"; color: #888; font-size: 13px; padding: 10px; display: block; background: none; position: absolute; }
+
 
 @media only screen 
 and (min-device-width : 320px) 
