--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                         <input type='hidden' name='session' value='' />
                         <input type='hidden' name='chatroom' value='' />
                         <textarea name='spiel' id='type-here' placeholder='Type your message'></textarea>
-                        <button type='submit' class='submit' id='submit' />Submit</button>
+                        <button type='submit' class='submit' id='submit' />Don't Spam!</button>
                     </form>
                     <!--<canvas id='drawing' width="500" height="300"></canvas>-->
                 </div>
